syntax = "proto2";

package com.matejdro.wearmusiccenter.proto;

option java_package = "com.matejdro.wearmusiccenter.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;


message CustomList {
  required string listId = 1;
  required int64 listTimestamp = 2;
  repeated ListEntry actions = 3;

  message ListEntry {
    required string entryId = 1;
    required string entryTitle = 2;
  }
}

message CustomListItemAction {
  required string listId = 1;
  required string entryId = 2;
}

