syntax = "proto2";

package com.matejdro.wearmusiccenter.proto;

option java_package = "com.matejdro.wearmusiccenter.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message MusicState {
  optional string artist = 1;
  optional string title = 2;
  required bool playing = 3;
  optional int32 time = 4;
  optional float volume = 5;
}

